# wamr-sys

./: Cargo.toml  build.rs
libiwasm/: CMakeLists.txt
