[package]
name = "wamr-sys"
version = "0.1.0"
authors = ["Rahul Thakoor <rahul.thakoor@gmail.com>"]
edition = "2018"
links = "iwasm"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"

[build-dependencies]
cc = "1.0"
cmake = "0.1"
bindgen = "0.56"