[package]
name = "wamr-sys"
version = "0.1.1"
authors = ["Rahul Thakoor <rahul.thakoor@gmail.com>"]
edition = "2018"
links = "iwasm"
description = "Rust bindings to webassembly micro runtime"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rahul-thakoor/wamr-sys"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"

[build-dependencies]
cc = "1.0"
cmake = "0.1"
bindgen = "0.56"